--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
     "@angular/ssr": "^17.3.17",
     "express": "^4.18.2",
     "jwt-decode": "^2.2.0",
+    "primeicons": "^7.0.0",
+    "primeng": "^17.18.15",
+    "quill": "^2.0.3",
     "rxjs": "~7.8.0",
+    "swiper": "^12.0.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
