--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/ssr": "^17.3.17",
     "express": "^4.18.2",
     "jwt-decode": "^2.2.0",
+    "ngx-colors": "^3.6.0",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.15",
     "quill": "^2.0.3",
