modificaciones en estilos y formato

--- a/angular.json
+++ b/angular.json
@@ -34,6 +34,7 @@
               "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeicons/primeicons.css",
+              "node_modules/shepherd.js/dist/css/shepherd.css",
               "src/styles.scss"
             ],
             "scripts": [],
@@ -109,6 +110,7 @@
               "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeicons/primeicons.css",
+              "node_modules/shepherd.js/dist/css/shepherd.css",
               "src/styles.scss"
             ],
             "scripts": []
