--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.17",
+    "canvas-confetti": "^1.9.3",
     "express": "^4.18.2",
     "jwt-decode": "^2.2.0",
     "ngx-colors": "^3.6.0",
@@ -30,6 +31,7 @@
     "primeng": "^17.18.15",
     "quill": "^2.0.3",
     "rxjs": "~7.8.0",
+    "shepherd.js": "^14.5.1",
     "swiper": "^12.0.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -38,6 +40,7 @@
     "@angular-devkit/build-angular": "^17.3.17",
     "@angular/cli": "^17.3.17",
     "@angular/compiler-cli": "^17.3.0",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/jwt-decode": "^2.2.1",
