--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "canvas-confetti": "^1.9.3",
     "express": "^4.18.2",
     "jwt-decode": "^2.2.0",
+    "leaflet": "^1.9.4",
     "ngx-colors": "^3.6.0",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.15",
@@ -44,6 +45,7 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/jwt-decode": "^2.2.1",
+    "@types/leaflet": "^1.9.21",
     "@types/node": "^18.18.0",
     "autoprefixer": "^10.4.21",
     "jasmine-core": "~5.1.0",
