config para deploy

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:pedi-app-ui": "node dist/pedi-app-ui/server/server.mjs"
+    "serve:ssr:pedi-app-ui": "node dist/pedi-app-ui/server/server.mjs",
+    "build:gh": "ng build --configuration production --base-href /virtual-shop-ui/ --output-path docs"
   },
   "private": true,
   "dependencies": {
