--- a/angular.json
+++ b/angular.json
@@ -20,6 +20,7 @@
             "outputPath": "dist/pedi-app-ui",
             "index": "src/index.html",
             "browser": "src/main.ts",
+             "baseHref": "/virtual-shop-ui/",
             "polyfills": [
               "zone.js"
             ],
